Add basic layout functions & Add OffsetLayout Demo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <!-- add style.css -->
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/theme.css" />
-
-     
   </head>
-  <body >
+  <body>
     <div class="theme-switch-wrapper">
       <label class="theme-switch" for="checkbox">
         <input type="checkbox" id="checkbox" />
@@ -19,15 +17,38 @@
       </label>
       <span id="theme-name">Light</span>
     </div>
-    <div id="app" >
-
-      <div class="shape shape-pointed-top">
-        <h3>Hello!</h3>
-        <p>Nice Content</p>
+    <div id="app">
+      <div class="demo-container">
+        <div id="demo-01" class="hex-cell hex-cell-pointed-top">
+          <h3>Hexagonla</h3>
+          <p>Pointed Top</p>
+        </div>
+       
+        <div id="demo-02" class="hex-cell hex-cell-flat-top">
+          <h3>Hexagonla</h3>
+          <p>Flat Top</p>
+        </div>
       </div>
-      <div class="shape shape-flat-top">
-        <h3>Hello!</h3>
-        <p>Nice Content</p>
+      <div class="demo-container">
+        <div id="demo-03" class="hex-grid">
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+        </div>
+      </div>
+
+      <div class="demo-container">
+        <div id="demo-04" class="hex-grid">
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+        </div>
       </div>
     </div>
 
