Add circular grid layout

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
           <div class="hex-cell hex-cell-pointed-top"></div>
           <div class="hex-cell hex-cell-pointed-top"></div>
           <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
         </div>
       </div>
 
@@ -54,6 +64,40 @@
           <div class="hex-cell hex-cell-pointed-top"></div>
           <div class="hex-cell hex-cell-pointed-top"></div>
           <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+        </div>
+      </div>
+      <div class="demo-container">
+        <div id="demo-05" class="hex-grid">
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          <div class="hex-cell hex-cell-pointed-top"></div>
+          
         </div>
       </div>
     </div>
